// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/App Header Default 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Hamburger 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Info Title 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title infoTitle"
        >
          כותרת
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Secondary Title 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <div
          className="title secondaryTitle"
        >
          כותרת
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header Sticky Component 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        className="stickyComponent"
      >
        <div
          style={
            Object {
              "padding": 10,
            }
          }
        >
          משהו דביק
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header With Back 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title"
        >
          <img
            alt="Blood Bank"
            className="logoImage"
            src="blood-bank-zichron-Little-logo.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/App Header With Notification 1`] = `
<div
  dir="rtl"
  style={
    Object {
      "height": "100vh",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "lightcyan",
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="appHeader"
    >
      <div
        className="headerRow"
      >
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 rightButton"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
        </button>
        <div
          className="title infoTitle"
        >
          ניהול תורים
        </div>
        <button
          className="MuiButtonBase-root-9 MuiIconButton-root-0 leftButton"
          disabled={false}
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <span
            className="MuiIconButton-label-8"
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root-12"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
